첫 웹사이트 업로드! 뿌-듯

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <h2>YERIN BAEK</h2>
     <p>
-      대한민국의 가수. 밴드 The Volunteers의 프론트맨이자 싱어송라이터이다.
-      어릴 때부터 갖춰진 탄탄한 기본기와 발성, 독보적인 음색으로 주목받았고 거의
-      모든 장르를 자신만의 감성으로 감쌀 정도로 가창력과 곡 해석이 뛰어나다는 평을 받고 있다.
+      대한민국의 가수. 밴드 The Volunteers의 프론트맨이자 싱어송라이터이다.<br>
+      어릴 때부터 갖춰진 탄탄한 기본기와 발성, 독보적인 음색으로 주목받았고 거의<br>
+      모든 장르를 자신만의 감성으로 감쌀 정도로 가창력과 곡 해석이 뛰어나다는 평을 받고 있다.<br>
     </p>
   </body>
 </html>
